# acs-comms

./: .env.example  .gitignore  .pre-commit-config.yaml  =2.31.0  Makefile  README.md  app.py  demo_llm.py  lil_api.py  main.py  mypy.ini  pyproject.toml  requirements.txt  run.py  tasks.bat
config/: persona.yaml
docs/: README.md  guardrails_contract.md  ollama_integration.md
src/acs_bridge/: __init__.py  deps.py  logging_config.py  main.py  settings.py
src/acs_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/acs_bridge/audio/: __init__.py  constants.py  textnorm.py  utils.py
src/acs_bridge/models/: __init__.py  schemas.py  state.py
src/acs_bridge/routers/: __init__.py  controls.py  events.py  media_ws.py
src/acs_bridge/services/: __init__.py  acs_client.py  guardrails.py  llm_base.py  llm_ollama.py  media_streamer.py  stt_base.py  stt_vosk.py  tts_base.py  tts_composite.py  tts_piper.py  tts_pyttsx3.py
src/phone_agent/: README.md  __init__.py
src/phone_agent/services/: __init__.py  guardrails.py  helpers.py  llm_base.py  llm_ollama.py
tests/: __init__.py  conftest.py  test_acceptance.py  test_audio_utils.py  test_crossfading.py  test_guardrails.py  test_lil_api.py  test_llm_base.py  test_llm_integration.py  test_llm_ollama.py  test_llm_ollama_stream.py  test_ollama_service.py  test_persona_prompt.py  test_piper_service.py  test_stt_service.py  test_textnorm.py  test_tts_service.py
